src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Daxtra_Parsing_Status__c</fullName>
        <label>Daxtra Parsing Status</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__isUploadPending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload Pending</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>